# lv_port_pc_eclipse

./: CMakeLists.txt  Home_48.c  README.md  lv_conf.h  lv_drv_conf.h  lv_example_img_2.c  mHome_48w.c  main.c
